# vca-compressor

./: CMakeLists.txt  DEPLOY.md  README.md
.github/workflows/: build.yml
source/: VCACompressorController.cpp  VCACompressorController.h  VCACompressorDSP.cpp  VCACompressorDSP.h  VCACompressorIDs.h  VCACompressorProcessor.cpp  VCACompressorProcessor.h  entry.cpp  version.h
